fix: reescribe codigo para compatibilidad Java 8 (JRE del sistema)